<resources>
    <string name="app_name">EventPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_header_events_fragment">Мероприятия</string>
    <string name="text_btn_create_event">Создать</string>
    <string name="hotels_empty_list">Список пуст</string>
    <string name="text_tabitem_upcoming">Предстоящие</string>
    <string name="text_tabitem_attened">Посещенные</string>
    <string name="text_tabitem_missed">Пропущенные</string>
    <string name="text_btn_save">Сохранить</string>
    <string name="text_title_create_fragment">Создание мероприятия</string>
    <string name="text_desc_back">back</string>
    <string name="text_title">Название</string>
    <string name="text_date">Дата</string>
    <string name="text_time">Время</string>
    <string name="text_city">Город</string>
    <string name="text_description">Описание</string>
    <string name="text_title_event_hint">Название мероприятия</string>
    <string name="text_date_event_hint">Введите дату</string>
    <string name="text_event_time_hint">Введите время</string>
    <string name="text_event_city_hint">Введите город</string>
    <string name="text_event_description_hint">Введите описание</string>
    <string name="text_input_location_address">Введите адрес</string>
    <string name="text_location">Адрес</string>
    <string name="error_title_empty">Название не может быть пустым</string>
    <string name="error_status_empty">Статус не может быть пустым</string>
    <string name="error_description_empty">Описание не может быть пустым</string>
    <string name="error_date_empty">Дата не может быть пустым</string>
    <string name="error_time_empty">Время не может быть пустым</string>
    <string name="error_location_empty">Адрес не может быть пустым</string>
    <string name="error_city_empty">Город не может быть пустым</string>
    <string name="success_insert_event">Данные успешно добавлены</string>
    <string name="error_insert_event">Ошибка создания данных</string>
    <string name="success_remove_event">Данные успешно удалены</string>
    <string name="error_remove_event">Ошибка удаления данных</string>
    <string name="success_update_event">Данные успешно обновлены</string>
    <string name="error_update_event">Ошибка обновения данных</string>
    <string name="time_format">%02d:%02d</string>
    <string name="date_format">%1s.%2s.%d</string>
    <string name="text_event">Мероприятие</string>
    <string name="text_btn_change">Редактировать</string>
    <string name="text_btn_delete">Удалить</string>
    <string name="text_btn_update">Обновить данные</string>
    <string name="text_title_edit_fragment">Редактирование</string>
    <string name="text_status_visit">Посещение</string>
    <string name="temperature_format_min">мин. темп.: %1s°C</string>
    <string name="temperature_format_max">макс. темп.: %1s°C</string>
    <string name="image_format">%1s%2s.png</string>


    <string-array name="status_visit">
        <item>Пойду</item>
        <item>Посетил</item>
        <item>Пропустил</item>
    </string-array>
</resources>