<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.anshabunin.eventplanner.ui.editevent.EditEventViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:paddingVertical="8dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="12dp"
                    android:src="@drawable/ic_back"
                    android:contentDescription="@string/text_desc_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_title_edit_fragment"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center" />

            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_event_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/et_event_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_title_event_hint"
                    android:background="@drawable/edittext_border"
                    android:text="@={data.eventTitle}"
                    app:layout_constraintTop_toBottomOf="@id/tv_event_name_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="16dp"
                    android:inputType="textAutoComplete"/>

                <TextView
                    android:id="@+id/tv_event_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_date"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@id/et_event_name"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginHorizontal="16dp"/>

                <EditText
                    android:id="@+id/et_event_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_date_event_hint"
                    android:background="@drawable/edittext_border"
                    android:text="@={data.eventDate}"
                    app:layout_constraintTop_toBottomOf="@id/tv_event_date_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="10dp"
                    android:focusable="false"
                    android:inputType="date"/>

                <TextView
                    android:id="@+id/tv_event_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_time"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/et_event_date"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="10dp"/>

                <EditText
                    android:id="@+id/et_event_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_event_time_hint"
                    android:text="@={data.eventTime}"
                    android:background="@drawable/edittext_border"
                    app:layout_constraintTop_toBottomOf="@id/tv_event_time_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="16dp"
                    android:focusable="false"
                    android:inputType="time"/>

                <TextView
                    android:id="@+id/tv_event_city_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_city"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/et_event_time"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="dropdown_menu"
                    app:endIconDrawable="@drawable/ic_dropdown"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_event_city_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColorHint="@color/grey"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    tools:ignore="MissingConstraints">

                    <AutoCompleteTextView
                        android:id="@+id/city_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_event_city_hint"
                        android:maxEms="3"
                        android:text="@={data.eventCity}"
                        android:dropDownHeight="0dp"
                        android:dropDownAnchor="@id/city_input"
                        android:background="@drawable/edittext_border"
                        android:completionThreshold="1"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_event_location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_location"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@id/city_input"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="10dp"/>

                <EditText
                    android:id="@+id/et_event_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_input_location_address"
                    android:background="@drawable/edittext_border"
                    app:layout_constraintTop_toBottomOf="@id/tv_event_location_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="20dp"
                    android:text="@={data.eventLocation}"
                    android:layout_marginHorizontal="16dp"
                    android:inputType="textAutoComplete"/>

                <TextView
                    android:id="@+id/tv_event_description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_description"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/et_event_location"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="10dp"/>

                <EditText
                    android:id="@+id/et_event_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_event_description_hint"
                    android:background="@drawable/edittext_border"
                    app:layout_constraintTop_toBottomOf="@id/tv_event_description_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginVertical="10dp"
                    android:lines="4"
                    android:text="@={data.eventDescription}"
                    android:layout_marginHorizontal="16dp"
                    android:inputType="textMultiLine"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/update_button"
                    style="@style/AccentButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/text_btn_update"
                    app:layout_constraintTop_toBottomOf="@id/et_event_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/progressbar"
            layout="@layout/view_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>